--- a/src/MongoDB.Driver/MongoDB.Driver.csproj
+++ b/src/MongoDB.Driver/MongoDB.Driver.csproj
@@ -32,7 +32,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Version)'==''">
-    <Version>0.0.0-local</Version>
+    <Version>2.17.1.1</Version>
   </PropertyGroup>
 
   <PropertyGroup>
