--- a/src/MongoDB.Driver.Core/MongoDB.Driver.Core.csproj
+++ b/src/MongoDB.Driver.Core/MongoDB.Driver.Core.csproj
@@ -37,7 +37,7 @@
   </ItemGroup>
 
   <PropertyGroup Condition="'$(Version)'==''">
-    <Version>2.17.1.1</Version>
+    <Version>0.0.0-local</Version>
   </PropertyGroup>
 
   <PropertyGroup>
